# rust-zbot-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  rest.http  tags
migrations/: 20200902165133_create-tables.sql  20200928164555_ubi-users.sql
src/: main.rs
src/config/: crypto.rs  mod.rs
src/db/: mod.rs  ubi_user.rs  user.rs
src/handlers/: auth.rs  mod.rs  r6stats.rs  user.rs
src/models/: mod.rs  ubi_user.rs  user.rs
src/ubi/: mod.rs  ubi_api.rs
