[package]
name = "discord-zbot-api"
version = "0.1.0"
authors = ["ajinkya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
futures = "0.3.5"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
chrono = "0.4.15"
config = "0.10.1"
dotenv = "0.15.0"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
eyre = "0.4"
color-eyre = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = {version = "0.1", features = ["env_logger"]}
tracing-subscriber = "0.2"
