[package]
name = "zbot_api"
version = "0.1.0"
authors = ["ajinkya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-identity = "0.2"
actix-web-httpauth = "0.4"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono" ] }
uuid = {version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.10.1"
dotenv = "0.15.0"
serde = { version="1.0.115", features = ["derive"]}
serde_json = "1.0.57"
serde_derive = "1.0.115"
eyre = "0.4"
color-eyre = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = {version = "0.1", features = ["env_logger"]}
tracing-subscriber = "0.2"
validator = { version = "0.10", feature = ["derive"] }
validator_derive = "0.10"
jsonwebtoken = "7.1"
argonautica = { version = "0.2", features = ["simd"] } #password hash algorithem
futures = { version = "0.3", features = ["compat"]}
reqwest = {version = "0.10", features = ["json"] }
